--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-eslint-parser": "^9.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "vuex-persist": "^3.1.3"
@@ -20,6 +23,8 @@
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.0.0",
     "element-plus": "^2.2.28",
+    "eslint": "^8.35.0",
+    "eslint-plugin-vue": "^9.9.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   }
